# smart_desk_calendar

./: README.md  video.html
Code/ForLocalESP/ThatClock/libraries/: lv_conf.h
Code/ForLocalESP/ThatClock/libraries/ParseData/: ParseData.cpp  ParseData.h
Code/ForLocalESP/ThatClock/libraries/TFT_eSPI/: User_Setup.h
Code/ForLocalESP/ThatClock/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_CalendarInDetail.c  ui_ClockPage.c  ui_ClockSettingPage.c  ui_HumidityPage.c  ui_MenuPage.c  ui_SettingsPage.c  ui_TimesUpPage.c  ui_WeatherForcastPage.c  ui_comp.c  ui_comp.h  ui_comp_calendarsettings.c  ui_comp_calendarsettings.h  ui_comp_hook.c  ui_comp_hook.h  ui_events.c  ui_events.h  ui_font_CharacterForCalendar.c  ui_font_Clock.c  ui_font_NumberForCalendar.c  ui_font_ZH.c  ui_helpers.c  ui_helpers.h  ui_img_1176433851.c  ui_img_1234665140.c  ui_img_accept_png.c  ui_img_calendaricon_png.c  ui_img_clock_png.c  ui_img_cloud_png.c  ui_img_cloudy_png.c  ui_img_cloudy_s_rain_png.c  ui_img_cloudy_s_snow_png.c  ui_img_cloudy_s_sunny_png.c  ui_img_decline_png.c  ui_img_fog_png.c  ui_img_home_png.c  ui_img_humidity_png.c  (+20 more)
Code/ForLocalESP/ThatClock/ui/: ui.ino  ui.ino.bak
Code/ForLocalESP/__MACOSX/ThatClock/libraries/TFT_eSPI/User_Setups/: ._Setup50_SSD1963_Parallel.h
Code/ForRemoteServer/: tg_remind_server.py  tg_server.py  time_server.py
PCB_Design/Board1_1/: PCB1_1.pcbdoc
PCB_Design/Board1_1/Schematic1_1/: 1_P1.schdoc
