SET(SOURCES ui_comp_calendarsettings.c
    ui_comp.c
    ui_ClockPage.c
    ui_MenuPage.c
    ui_SettingsPage.c
    ui_CalendarInDetail.c
    ui_ClockSettingPage.c
    ui_TimesUpPage.c
    ui_WeatherForcastPage.c
    ui_HumidityPage.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_1234665140.c
    ui_img_network_png.c
    ui_img_settings_png.c
    ui_img_calendaricon_png.c
    ui_img_clock_png.c
    ui_img_cloud_png.c
    ui_img_humidity_png.c
    ui_img_home_png.c
    ui_img_notification_png.c
    ui_img_sunny_s_cloudy_png.c
    ui_img_refresh_png.c
    ui_img_accept_png.c
    ui_img_decline_png.c
    ui_img_1176433851.c
    ui_img_cloudy_png.c
    ui_img_cloudy_s_rain_png.c
    ui_img_cloudy_s_snow_png.c
    ui_img_cloudy_s_sunny_png.c
    ui_img_fog_png.c
    ui_img_partly_cloudy_png.c
    ui_img_rain_png.c
    ui_img_rain_heavy_png.c
    ui_img_rain_light_png.c
    ui_img_rain_s_cloudy_png.c
    ui_img_rain_s_snow_png.c
    ui_img_rain_s_sunny_png.c
    ui_img_snow_png.c
    ui_img_snow_heavy_png.c
    ui_img_snow_light_png.c
    ui_img_snow_s_cloudy_png.c
    ui_img_snow_s_rain_png.c
    ui_img_sunny_png.c
    ui_img_sunny_s_rain_png.c
    ui_img_thunderstorms_png.c
    fonts/ui_font_CharacterForCalendar.c
    fonts/ui_font_Clock.c
    fonts/ui_font_NumberForCalendar.c
    fonts/ui_font_ZH.c)

add_library(ui ${SOURCES})
